wolfy's mobile spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -718,6 +718,14 @@ a:focus {
   ol {
     list-style-position: inside;
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    letter-spacing: 0.075em;
+  }
 }
 
 /* iPhone 4 ----------- */
